# cudaSAXS

./: .gitignore  CMakeLists.txt  CMakeListsWrapper.txt  README.md  cudaSAXS.cpp  cudaSAXS.cu  output  saxsDeviceKernels.cu  saxsDeviceKernels.h
Cuda/: BSpline.cpp  BSpline.h  CMakeLists.txt  CudaSaxsManager.cu  CudaSaxsManager.h  Particle.h  fft3d.cu
Exec/: CMakeLists.txt  Options.cpp  Options.h  RunSaxs.cu  RunSaxs.h
Saxs/: CMakeLists.txt  Options.cpp  Options.h  RhoSaxs.h  RunSaxs.cpp  RunSaxs.h  Splines.cu  Splines.h  opsfact.cu  saxsDeviceKernels.cu  saxsDeviceKernels.cuh  saxsKernel.cu  saxsKernel.h
System/: AtomCounter.cpp  Atoms.cpp  Atoms.h  CMakeLists.txt  Cell.cpp  Cell.h  Python3.cpp
Utilities/: BSpline.cpp  BSpmod.cpp  CMakeLists.txt  Fstream.cpp  FstreamC.cpp  FstreamC.h  Scattering.cpp  readTraj.cpp  readTraj.h
cudaKernels/: CMakeLists.txt  saxsDeviceKernels.cu  saxsDeviceKernels.cuh
gui/: CMakeLists.txt
gui/include/: AdvancedOptionsDialog.h  InputForm.h  MainWindow.h  OptionsData.h  ProcessRunner.h
gui/src/: AdvancedOptionsDialog.cpp  InputForm.cpp  MainWindow.cpp  OptionsData.cpp  ProcessRunner.cpp  main.cpp
gui/ui/: AdvancedOptionsDialog.ui  InputForm.ui  MainWindow.ui
include/: Units.h
pysrc/: compareIqs.py  compareIqs_gpt.py  fitBilayer.py  fitBilayer2.py  fitLamellar.py  form-factor-fitting-script.py  topology.py  trajectories.py
src/: CMakeLists.txt  main.cpp  openSAXS.cpp
src/Cuda/: CMakeLists.txt
src/System/: Atoms.cpp  CMakeLists.txt  Cell.h  Python3.h
src/Utilities/: MyUtilClass.cpp
src/pysrc/: trajectories.py
xdr/: CMakeLists.txt
